--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -33,14 +33,14 @@ jobs:
       run: python -m build --sdist --wheel --outdir dist/
 
     # uncomment to publish to TestPyPI
-    - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-
-    # uncomment to publish to PyPI
-    # - name: Publish distribution to PyPI
+    # - name: Publish distribution to Test PyPI
     #   uses: pypa/gh-action-pypi-publish@master
     #   with:
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
+    #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+    #     repository_url: https://test.pypi.org/legacy/
+
+    # uncomment to publish to PyPI
+    - name: Publish distribution to PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
