--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -6,7 +6,7 @@ on:
       - master
 jobs:
   deploy:
-    name: Deploy to GitHub Pages
+    name: Build Documentation
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
