--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,6 +3,7 @@ scipy
 matplotlib>=3.4
 triangle
 sectionproperties>=2.1.1
+concreteproperties
 rich
 pydata-sphinx-theme
 Sphinx>=5.0
@@ -11,4 +12,3 @@ ipykernel
 nbsphinx
 pandoc
 IPython
-markupsafe==2.0.1
