Try to get nbsphinx to work on gh pages

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,9 @@
 numpy
 scipy
 matplotlib>=3.4
+setuptools
 triangle
 sectionproperties>=2.1.1
-concreteproperties
 rich
 pydata-sphinx-theme
 Sphinx>=5.0
