Try installing repo

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,14 +1,13 @@
 numpy
 scipy
 matplotlib>=3.4
-setuptools
 triangle
 sectionproperties>=2.1.1
 rich
 pydata-sphinx-theme
 Sphinx>=5.0
 sphinx_autorun
+ipykernel
 nbsphinx
 pandoc
-markupsafe==2.0.1
-pygments >= 2.7
+IPython
