--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -37,5 +37,5 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         branch: gh-pages
-        directory: gh-pages
+        directory: gh-pages/2.1.0
         github_token: ${{ secrets.GITHUB_TOKEN }}
