--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Commit documentation changes
       run: |
         git clone https://github.com/robbievanleeuwen/concrete-properties.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/build/html/* gh-pages/
+        cp -r docs/build/html/* gh-pages/2.1.0
         cd gh-pages
         touch .nojekyll
         git config --local user.email "action@github.com"
@@ -37,5 +37,5 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         branch: gh-pages
-        directory: gh-pages/2.1.0
+        directory: gh-pages
         github_token: ${{ secrets.GITHUB_TOKEN }}
