--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -24,8 +24,9 @@ jobs:
     - name: Commit documentation changes
       run: |
         git clone https://github.com/robbievanleeuwen/concrete-properties.git --branch gh-pages --single-branch gh-pages
-        mkdir gh-pages/2.1.0
-        cp -r docs/build/html/* gh-pages/2.1.0
+        # mkdir gh-pages/0.1.0
+        # cp -r docs/build/html/* gh-pages/0.1.0
+        cp -r docs/build/html/* gh-pages/
         cd gh-pages
         touch .nojekyll
         git config --local user.email "action@github.com"
