--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
       run: pip install --upgrade --user pip
 
     - name: Install package
-      run: python -m pip install -e .
+      run: python -m pip install -e .[test]
 
     - name: Run package tests
       run: python -m pytest
