Move contributing and code of conduct; add reqs; add dev dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,3 +45,14 @@ install_requires =
 [options.extras_require]
 test =
   pytest
+
+dev =
+  pytest
+  pydata-sphinx-theme
+  Sphinx>=5.0
+  sphinx_autorun
+  ipykernel
+  ipywidgets
+  nbsphinx
+  pandoc
+  IPython
