--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,7 +2,8 @@ numpy
 scipy
 matplotlib>=3.4
 triangle
-sectionproperties>=2.1.1
+shapely
+sectionproperties
 rich
 pydata-sphinx-theme
 Sphinx>=5.0
