update .gitignore to exclude local tmp testing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # Compiled python modules.
 *.pyc
 
+# pycache test directory tmp files from local testing
+/concreteproperties/tests/__pycache__
+
 # Setuptools distribution folder.
 /dist/
 /build/
 
-# Commont virtual environments
+# Common virtual environments
 .venv/
 .env/
 
