--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # doc generated
 /docs/build
 /docs/source/sphinx_gallery_examples/
-/docs/source/rst/gen
+/docs/source/gen
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
