--- a/.github/workflows/test_docs.yml
+++ b/.github/workflows/test_docs.yml
@@ -1,6 +1,9 @@
 name: Test Documentation Build
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - documentation_update
 jobs:
   deploy:
     name: Test Documentation Build
