--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,16 +1,17 @@
 numpy
-scipy
+scipy==1.9.2
 matplotlib>=3.4
 triangle
 shapely
 sectionproperties
 rich
 pydata-sphinx-theme
-Sphinx>=5.0
+Sphinx==5.2.3
 sphinx_autodoc_typehints
 sphinx_autorun
-ipykernel
+ipykernel==6.16.0
 ipywidgets
+nbconvert==7.2.1
 nbsphinx
 pandoc
 IPython
