--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -15,3 +15,9 @@ nbconvert==7.2.1
 nbsphinx
 pandoc
 IPython
+more_itertools==8.14
+traitlets==5.4.0
+jupyter-client==7.4.2
+psutil==5.9.2
+jupyter-core==4.11.1
+tinycss2==1.1.1
