Further refine reqs

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,17 +6,15 @@ shapely
 sectionproperties
 rich
 pydata-sphinx-theme
-Sphinx>=5.0
+Sphinx==5.2.3
 sphinx_autodoc_typehints
 sphinx_autorun
-ipykernel
+ipykernel==6.16.0
 ipywidgets
-nbconvert
+nbconvert==7.2.1
 nbsphinx
 pandoc
 IPython
-more_itertools
-traitlets
 jupyter-client==7.4.2
 psutil==5.9.2
 jupyter-core==4.11.1
