--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -9,9 +9,8 @@ pydata-sphinx-theme
 Sphinx==5.2.3
 sphinx_autodoc_typehints
 sphinx_autorun
-ipykernel==6.16.0
+ipykernel
 ipywidgets
-nbconvert==7.2.1
 nbsphinx
 pandoc
 IPython
