--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,7 +6,7 @@ shapely
 sectionproperties
 rich
 pydata-sphinx-theme
-Sphinx==5.2.3
+Sphinx>5.0
 sphinx_autodoc_typehints
 sphinx_autorun
 ipykernel
