--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,23 +1,17 @@
 numpy
-scipy==1.9.2
+scipy
 matplotlib>=3.4
 triangle
 shapely
 sectionproperties
 rich
 pydata-sphinx-theme
-Sphinx==5.2.3
+Sphinx>5.0
 sphinx_autodoc_typehints
 sphinx_autorun
-ipykernel==6.16.0
+ipykernel
 ipywidgets
-nbconvert==7.2.1
+nbconvert
 nbsphinx
 pandoc
 IPython
-more_itertools==8.14
-traitlets==5.4.0
-jupyter-client==7.4.2
-psutil==5.9.2
-jupyter-core==4.11.1
-tinycss2==1.1.1
