--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     matplotlib>=3.4
     triangle
     sectionproperties
+    shapely<2.0
     rich
 
 [options.extras_require]
