--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,7 +6,7 @@ shapely<2.0
 sectionproperties
 rich
 pydata-sphinx-theme
-Sphinx>5.0
+Sphinx<6.0
 sphinx_autodoc_typehints
 sphinx_autorun
 ipykernel
