Apply black; fix requirements (including shapely 2.0)

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     matplotlib>=3.5
     triangle
     sectionproperties
-    shapely<2.0
+    shapely>=2.0
     rich
 
 [options.extras_require]
