Pin sectionproperties version

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ install_requires =
     scipy
     matplotlib>=3.5
     triangle
-    sectionproperties
+    sectionproperties==2.1.5
     shapely>=2.0
     rich
 
