--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ shapely = "^2.0.1"
 triangle = "^20230923"
 rich = "^13.6.0"
 click = "^8.1.7"
+more-itertools = "^10.1.0"
 sectionproperties = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
