--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,11 +60,11 @@ repos:
         language: system
         types: [text]
         stages: [commit, push, manual]
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v3.0.3
-  #   hooks:
-  #     - id: prettier
-  # - repo: https://github.com/kynan/nbstripout
-  #   rev: 0.6.1
-  #   hooks:
-  #     - id: nbstripout
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
+    hooks:
+      - id: prettier
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.6.1
+    hooks:
+      - id: nbstripout
