--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ maintainers = [
 readme = "README.md"
 homepage = "https://github.com/robbievanleeuwen/concrete-properties"
 repository = "https://github.com/robbievanleeuwen/concrete-properties"
-documentation = "https://concreteproperties.readthedocs.io"
+documentation = "https://concrete-properties.readthedocs.io"
 keywords = [
     "concrete",
     "reinforced-concrete",
