--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,3 +68,14 @@ repos:
     rev: 0.6.1
     hooks:
       - id: nbstripout
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.7.0
+    hooks:
+      - id: nbqa-black
+        additional_dependencies: [black==23.9.1]
+      - id: nbqa-pyupgrade
+        additional_dependencies: [pyupgrade==3.14.0]
+        args: ["--py39-plus"]
+      - id: nbqa-isort
+        additional_dependencies: [isort==5.12.0]
+        args: [--profile=black]
