--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -52,10 +52,12 @@ exclude-contributors:
   - "robbievanleeuwen"
 
 # Custom text at start of release
-header: |
-  xxx
+header: >
+  This release maintains compatibility with `sectionproperties` `v3.1.0` and adds `nbQA`
+  and `flake8-pytest-style`
 
 template: |
+
   ## What's Changed
 
   $CHANGES
