--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,42 +45,42 @@ Changelog = "https://github.com/robbievanleeuwen/concrete-properties/releases"
 
 [tool.poetry.dependencies]
 python = ">=3.9.0,<3.12"
-numpy = "^1.25.2"  # sectionproperties (numba) requires numpy <1.26
-scipy = "^1.11.3"
-matplotlib = "^3.8.0"
-shapely = "^2.0.1"
+numpy = "^1.24.0"
+scipy = "^1.10.0"
+matplotlib = "^3.8.2"
+shapely = "^2.0.2"
 triangle = "^20230923"
-rich = "^13.6.0"
+rich = "^13.7.0"
 click = "^8.1.7"
-more-itertools = "^10.1.0"
-sectionproperties = "^3.1.0"
+more-itertools = "^10.0.0"
+sectionproperties = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
-black = "^23.9.1"
-coverage = { extras = ["toml"], version = "^7.3.2" }
+black = "^23.10.1"
+coverage = { extras = ["toml"], version = "^7.3.3" }
 darglint = "^1.8.1"
 flake8 = "^6.1.0"
-flake8-bugbear = "^23.9.16"
+flake8-bugbear = "^23.12.2"
 flake8-docstrings = "^1.7.0"
 flake8-rst-docstrings = "^0.3.0"
 flake8-pytest-style = "^1.7.2"
 furo = "^2023.9.10"
-ipykernel = "^6.25.2"
-ipython = "^8.16.1"
+ipykernel = "^6.27.1"
+ipython = "^8.18.1"
 ipywidgets = "^8.1.1"
-isort = "^5.12.0"
-nbconvert = "^7.9.2"
+isort = "^5.13.2"
+nbconvert = "^7.13.0"
 nbsphinx = "^0.9.3"
-notebook = "^7.0.4"
+notebook = "^7.0.6"
 pep8-naming = "^0.13.3"
-pre-commit = "^3.4.0"
+pre-commit = "^3.6.0"
 pre-commit-hooks = "^4.5.0"
-Pygments = "^2.16.1"
-pytest = "^7.4.2"
+Pygments = "^2.17.2"
+pytest = "^7.4.3"
 pyupgrade = "^3.15.0"
 sphinx = "^7.2.6"
 sphinx-autobuild = "^2021.3.14"
-sphinx-click = "^5.0.1"
+sphinx-click = "^5.1.0"
 sphinx-copybutton = "^0.5.2"
 sphinxext-opengraph = "^0.8.2"
 
