--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,9 +23,9 @@ jobs:
           - { python: "3.11", os: "windows-latest", session: "tests" }
           - { python: "3.10", os: "windows-latest", session: "tests" }
           - { python: "3.9", os: "windows-latest", session: "tests" }
-          - { python: "3.11", os: "macos-latest", session: "tests" }
-          - { python: "3.10", os: "macos-latest", session: "tests" }
-          - { python: "3.9", os: "macos-latest", session: "tests" }
+          - { python: "3.11", os: "macos-13", session: "tests" }
+          - { python: "3.10", os: "macos-13", session: "tests" }
+          - { python: "3.9", os: "macos-13", session: "tests" }
           - { python: "3.10", os: "ubuntu-latest", session: "docs-build" }
 
     env:
