--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 packages = [
     { include = "concreteproperties", from = "src" },
@@ -44,7 +45,7 @@ Changelog = "https://github.com/robbievanleeuwen/concrete-properties/releases"
 "Bug Tracker" = "https://github.com/robbievanleeuwen/concrete-properties/issues"
 
 [tool.poetry.dependencies]
-python = ">=3.9.0,<3.12"
+python = ">=3.9.0,<3.13"
 numpy = "^1.26.4"
 scipy = "^1.12.0"
 matplotlib = "^3.8.3"
