--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -52,7 +52,9 @@ exclude-contributors:
   - "robbievanleeuwen"
 
 # Custom text at start of release
-header: >
+header: |
+
+  This release adds python 3.12 support!
 
 template: |
 
