--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -159,3 +159,5 @@ jobs:
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4.5.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
