--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -35,6 +35,8 @@ categories:
       - "build"
 
 category-template: "### $TITLE"
+name-template: "v$RESOLVED_VERSION"
+tag-template: "v$RESOLVED_VERSION"
 
 version-resolver:
   major:
@@ -48,13 +50,10 @@ version-resolver:
       - "patch"
   default: patch
 
-exclude-contributors:
-  - "robbievanleeuwen"
-
 # Custom text at start of release
 header: |
 
-  This release adds python 3.12 support!
+  Insert header here...
 
 template: |
 
