--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,31 @@
-# Compiled python modules.
-*.pyc
-
-# Setuptools distribution folder.
-dist/
+# python generated files
+__pycache__/
+*.py[oc]
 build/
+dist/
+wheels/
+*.egg-info
 
-# Common virtual environments
-.venv/
-.env/
-.python-version
+# venv
+.venv
 
 # doc generated
 docs/_build
 docs/gen
 
-# Python egg metadata, regenerated from source files by setuptools.
-*.egg-info
-src/*.egg-info/
-
-# Pycharm IDE file folder
-.idea/
-
-# vscode
-.vscode/
-*.code-workspace
-
-# mac
-.DS_Store
+# pytest
+.pytest_cache
 
 # coverage reports
 .coverage
 .coverage.*
+htmlcov/
 
-# nox
-.nox/
-
-# cache
-__pycache__/
-.pytest_cache
-
-# Jupyter Notebook
+# jupyter notebook
 .ipynb_checkpoints
+
+# ruff
+.ruff_cache
+
+# mac
+.DS_Store
