--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,15 @@
-[tool.poetry]
+[project]
 name = "concreteproperties"
 version = "0.6.3"
 description = "A python package to determine cross-section propreties of reinforced concrete sections."
-license = "MIT"
+readme = "README.md"
+license = {file = "LICENSE"}
 authors = [
-    "Robbie van Leeuwen <robbie.vanleeuwen@gmail.com>",
+    { name = "Robbie van Leeuwen", email = "robbie.vanleeuwen@gmail.com" }
 ]
 maintainers = [
-    "Robbie van Leeuwen <robbie.vanleeuwen@gmail.com>",
+   { name = "Robbie van Leeuwen", email = "robbie.vanleeuwen@gmail.com" }
 ]
-readme = "README.md"
-homepage = "https://github.com/robbievanleeuwen/concrete-properties"
-repository = "https://github.com/robbievanleeuwen/concrete-properties"
-documentation = "https://concrete-properties.readthedocs.io"
 keywords = [
     "concrete",
     "reinforced-concrete",
@@ -29,64 +26,61 @@ classifiers = [
     "Environment :: Console",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-packages = [
-    { include = "concreteproperties", from = "src" },
-    { include = "src/concreteproperties/py.typed"},
+requires-python = ">=3.10,<3.13"
+dependencies = [
+    "sectionproperties~=3.5.0",
+    "numpy~=1.26.4",
+    "scipy~=1.14.1",
+    "matplotlib~=3.9.2",
+    "shapely~=2.0.6",
+    "cytriangle~=1.0.3",
+    "rich[jupyter]~=13.9.3",
+    "more-itertools~=10.5.0",
 ]
-include = []
 
-[tool.poetry.urls]
+[project.urls]
+Homepage = "https://concrete-properties.readthedocs.io"
+Documentation = "https://concrete-properties.readthedocs.io"
+Repository = "https://github.com/robbievanleeuwen/concrete-properties"
+Issues = "https://github.com/robbievanleeuwen/concrete-properties/issues"
 Changelog = "https://github.com/robbievanleeuwen/concrete-properties/releases"
-"Bug Tracker" = "https://github.com/robbievanleeuwen/concrete-properties/issues"
 
-[tool.poetry.dependencies]
-python = ">=3.9.0,<3.13"
-numpy = "^1.26.4"
-scipy = "^1.12.0"
-matplotlib = "^3.8.3"
-shapely = "^2.0.3"
-cytriangle = "^1.0.2"
-rich = "^13.7.1"
-click = "^8.1.7"
-more-itertools = "^10.2.0"
-sectionproperties = "^3.3.0"
+[dependency-groups]
+docs = [
+    "furo==2024.8.6",
+    "sphinx==8.1.3",
+    "notebook==7.2.2",
+    "ipykernel==6.29.5",
+    "ipython==8.29.0",
+    "nbsphinx==0.9.5",
+    "nbconvert==7.16.4",
+    "sphinx-copybutton==0.5.2",
+    "sphinxext-opengraph==0.9.1",
+]
+test = [
+    "pytest==8.3.3",
+    "pytest-check==2.4.1",
+    "coverage[toml]==7.6.4",
+]
+lint = [
+    "pre-commit==4.0.1",
+    "ruff==0.7.1",
+    "pyright==1.1.386",
+]
 
-[tool.poetry.dev-dependencies]
-black = "^24.2.0"
-coverage = { extras = ["toml"], version = "^7.4.3" }
-darglint = "^1.8.1"
-flake8 = "^7.0.0"
-flake8-bugbear = "^24.2.6"
-flake8-docstrings = "^1.7.0"
-flake8-rst-docstrings = "^0.3.0"
-flake8-pytest-style = "^1.7.2"
-furo = "^2024.01.29"
-ipykernel = "^6.29.3"
-ipython = "^8.18.1"  # 8.19 and above drops 3.9 support
-ipywidgets = "^8.1.2"
-isort = "^5.13.2"
-nbconvert = "^7.16.2"
-nbsphinx = "^0.9.3"
-notebook = "^7.1.1"
-pep8-naming = "^0.13.3"
-pre-commit = "^3.6.2"
-pre-commit-hooks = "^4.5.0"
-Pygments = "^2.17.2"
-pytest = "^8.0.2"
-pyupgrade = "^3.15.1"
-sphinx = "^7.2.6"
-sphinx-autobuild = "^2024.2.4"
-sphinx-click = "^5.1.0"
-sphinx-copybutton = "^0.5.2"
-sphinxext-opengraph = "^0.9.1"
+[tool.uv]
+default-groups = ["docs", "test", "lint"]
 
-[tool.poetry.scripts]
-concreteproperties = "concreteproperties.__main__:main"
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+pythonVersion = "3.10"
+include = ["src"]
+exclude = ["**/__init__.py"]
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
@@ -96,13 +90,6 @@ tests = ["tests", "*/tests"]
 branch = true
 source = ["concreteproperties", "tests"]
 
-[tool.coverage.report]
-show_missing = true
-
-[tool.isort]
-profile = "black"
-lines_after_imports = 2
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
