Add quantiphy, print_results() uses engineering notation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "cytriangle~=1.0.3",
     "rich[jupyter]~=13.9.3",
     "more-itertools~=10.5.0",
+    "quantiphy~=2.20",
 ]
 
 [project.urls]
