Add default units, update docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ docs = [
     "ipython==8.29.0",
     "nbsphinx==0.9.5",
     "nbconvert==7.16.4",
+    "sphinx-autobuild==2024.10.03",
     "sphinx-copybutton==0.5.2",
     "sphinxext-opengraph==0.9.1",
 ]
